samples/k8s/todo_microservices/gateway/gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-app
spec:
  hosts:
  - "*"
  gateways:
  - todo-app-gateway
  http:
  - match:
    - uri:
        prefix: "/command/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: todo-command
        port:
          number: 8000
